todos los ejecicios de la act3 estan completos

--- a/P3_NaranjoSalgadoDavidAbraham.ipynb
+++ b/P3_NaranjoSalgadoDavidAbraham.ipynb
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53.357142857142854\n"
+      "(7, 11.12, 95.59, 42.73, 34.715334904779766, 23.0, 89.03)\n"
      ]
     }
    ],
@@ -90,13 +90,16 @@
     "    length = len(tuple)\n",
     "    tMin = min(tuple)\n",
     "    tMax = max(tuple)\n",
-    "    mid = np.mean(tuple)\n",
-    "    print(mid)\n",
+    "    tMeadian = np.median(tuple)\n",
+    "    tStandar = np.std(tuple)\n",
+    "    tQ1 = np.quantile(tuple,0.25)\n",
+    "    tQ3 = np.quantile(tuple,0.75)\n",
     "\n",
+    "    return (length,tMin,tMax,tMeadian,tStandar,tQ1,tQ3)\n",
     "\n",
     "more_numbers = (11.13, 34.87, 95.59, 82.49, 42.73, 11.12, 95.57)\n",
     "\n",
-    "tupleProcess(more_numbers)\n"
+    "print(tupleProcess(more_numbers))\n"
    ]
   },
   {
@@ -110,10 +113,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('is:12312', 'cd:12389', 'if:123123')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def delTuple( credentials ):\n",
+    "    '''Esta funcion recibe una tupla y evalua si en las cadenas existe la sub cadena cd y hace un slice a la tupla\n",
+    "        credentials : tuple \n",
+    "        return tuple\n",
+    "    '''\n",
+    "    tempCred = credentials\n",
+    "    index = 0\n",
+    "    i = 0\n",
+    "    while(i < len(credentials)):\n",
+    "        \n",
+    "        if \"cd\" in credentials[i]:\n",
+    "            index = i\n",
+    "            credentials = credentials[ :i ] + credentials[ i+1 : ]\n",
+    "\n",
+    "        i += 1\n",
+    "    \n",
+    "    return credentials\n",
+    "\n",
+    "\n",
+    "def isIs( credentials ):\n",
+    "    '''Esta funcion recibe una tupla y evalua si en las cadenas existe la sub cadena is y ejecuta delTuple si no encuentra is\n",
+    "        credentials : tuple \n",
+    "        return tuple\n",
+    "    '''\n",
+    "    cointains = False\n",
+    "\n",
+    "    for x in credentials:\n",
+    "        if \"is\" in x:\n",
+    "            cointains =True\n",
+    "    \n",
+    "    if(cointains):\n",
+    "        return(credentials)\n",
+    "    else:\n",
+    "        return delTuple( credentials )\n",
+    "\n",
+    "        \n",
+    "userList =  input(\"Ingresa tu tupla de credenciales separado por comas: \").split(',')\n",
+    "\n",
+    "userTuple = tuple(userList)\n",
+    "\n",
+    "print(isIs(userTuple))"
+   ]
   },
   {
    "attachments": {},
@@ -126,10 +179,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Firulais', 'perro', 5, '10-01-17')\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Este programa recibe una tupla predefinida y y remplaza un valor mediante un splice\n",
+    "    return null\n",
+    "'''\n",
+    "M=('Filis','perro',5,'10-01-17')\n",
+    "\n",
+    "newName = input(\"Introduce el nuevo nombre de tu mascota : \")\n",
+    "\n",
+    "M = (newName,) + M[1:]\n",
+    "\n",
+    "print(M)"
+   ]
   },
   {
    "attachments": {},
@@ -141,10 +213,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, '5', '6', '7', '8', '9')\n"
+     ]
+    }
+   ],
+   "source": [
+    "def concatTuple( tuple , addition ):\n",
+    "    '''Este programa recibe una tupla predefinida y añade nuevos valores a una tupla\n",
+    "        tuple : tuple\n",
+    "        addition : tuple\n",
+    "        return tuple\n",
+    "    '''\n",
+    "    tuple = tuple + addition\n",
+    "\n",
+    "    return(tuple)\n",
+    "\n",
+    "orgTuple =  (1,2,3,4)\n",
+    "\n",
+    "newValues = input(\"Ingresa tu tupla de valores separado por comas: \").split(',')\n",
+    "\n",
+    "newTuple = tuple(newValues)\n",
+    "\n",
+    "print(concatTuple( orgTuple , newTuple ))"
+   ]
   },
   {
    "attachments": {},
@@ -164,10 +262,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "\n",
+    "def readText( text ):\n",
+    "    '''Esta funcion recibe una direccion de archivo y lo abre en modo de lectura e imrime las lineas leidas\n",
+    "        text : String\n",
+    "        return : null\n",
+    "    '''\n",
+    "    file1 = open(text, 'r')\n",
+    "    lines = file1.readlines()\n",
+    "    print(lines)\n",
+    "\n",
+    "text = filedialog.askopenfilename()\n",
+    "readText(text)"
+   ]
   },
   {
    "attachments": {},
@@ -179,10 +300,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "def delDuplicate ( dList ):\n",
+    "    '''Esta funcion recibe una lista y la ordena usando el metodo set\n",
+    "        dList : list\n",
+    "        return : list\n",
+    "    '''\n",
+    "    \n",
+    "    cleanList = list(set(dList) )\n",
+    "    \n",
+    "    return cleanList\n",
+    "\n",
+    "print(delDuplicate([1,1,1,2,4,3,5,5,3]))"
+   ]
   },
   {
    "attachments": {},
@@ -194,10 +336,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "def delConcatDuplicate ( list1, list2 ):\n",
+    "    '''Esta funcion recibe dos listas, las concatena y las ordena usando el metodo set para regresar solo una lista sin duplicados\n",
+    "        list1 : list\n",
+    "        list2 : list\n",
+    "        return : list\n",
+    "    '''\n",
+    "    cleanConcatList = list(set(list1 + list2) )\n",
+    "    \n",
+    "    return cleanConcatList\n",
+    "\n",
+    "\n",
+    "list1 = [1,1,1,2,4,3,5,5,3]\n",
+    "list2 = [1,7,1,2,4,3,6,8,5,9,9,6,6]\n",
+    "print(delConcatDuplicate(list1,list2))"
+   ]
   },
   {
    "attachments": {},
@@ -209,10 +375,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "def delDuplicateInter ( list1, list2 ):\n",
+    "    '''Esta funcion recibe dos listas y retorna sus intersecciones usando el metodo set\n",
+    "        list1 : list\n",
+    "        list2 : list\n",
+    "        return : list\n",
+    "    '''\n",
+    "    inteseptionList = list(set(list1).intersection(list2))\n",
+    "    \n",
+    "    return inteseptionList\n",
+    "\n",
+    "\n",
+    "list1 = [1,1,1,2,4,3,5,5,3]\n",
+    "list2 = [1,7,1,2,4,3,6,8,5,9,9,6,6]\n",
+    "print(delDuplicateInter(list1,list2))"
+   ]
   },
   {
    "attachments": {},
@@ -224,10 +414,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 10, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "def delAfromB ( list1, list2 ):\n",
+    "    '''Esta funcion recibe dos listas y retorna sus los valores dentro de A que no estan en B usando el metodo set junto a difference\n",
+    "        list1 : list\n",
+    "        list2 : list\n",
+    "        return : list\n",
+    "    '''\n",
+    "    differenceList = c = list(set(list1).difference(set(list2)))\n",
+    "    \n",
+    "    return differenceList\n",
+    "\n",
+    "\n",
+    "list1 = [1,1,1,2,4,3,5,5,3,10,23]\n",
+    "list2 = [7,2,4,3,6,8,5,9,9,6,6]\n",
+    "print(delAfromB(list1,list2))"
+   ]
   },
   {
    "attachments": {},
@@ -239,10 +453,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "def delCommon ( list1, list2 ):\n",
+    "    '''Esta funcion recibe dos listas y retorna sus diferencias usando el metodo set junto a symmetric_difference\n",
+    "        list1 : list\n",
+    "        list2 : list\n",
+    "        return : list\n",
+    "    '''\n",
+    "    differenceList = list(set(list1).symmetric_difference(set(list2)))\n",
+    "    \n",
+    "    return differenceList\n",
+    "\n",
+    "\n",
+    "list1 = [1,1,1,2,4,3,5,5,3]\n",
+    "list2 = [7,2,4,3,6,8,5,9,9,6,6]\n",
+    "print(delCommon(list1,list2))"
+   ]
   },
   {
    "attachments": {},
@@ -259,6 +497,32 @@
     "Las palabras que están en la primera lista y no están en la segunda\n",
     "Las palabras que están en la segunda lista y no en la primera\n",
     "Las palabras que están en la primera lista y en la segunda, pero no en amabas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"\\n']\n",
+      "['\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"\\n']\n",
+      "[]\n",
+      "['\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"\\n']\n",
+      "['\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"\\n', '\"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\"', '\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from main import main \n",
+    "\n",
+    "text1 =\"demofile1.txt\"\n",
+    "text2 =\"demofile2.txt\"\n",
+    "\n",
+    "main(text1,text2)"
    ]
   }
  ],
@@ -278,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
