--- a/P3_NaranjoSalgadoDavidAbraham.ipynb
+++ b/P3_NaranjoSalgadoDavidAbraham.ipynb
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53.357142857142854\n"
+      "89.03\n"
      ]
     }
    ],
@@ -90,8 +90,13 @@
     "    length = len(tuple)\n",
     "    tMin = min(tuple)\n",
     "    tMax = max(tuple)\n",
-    "    mid = np.mean(tuple)\n",
-    "    print(mid)\n",
+    "    tMean = np.mean(tuple) \n",
+    "    tMedian = np.median(tuple)\n",
+    "    tStandarVariation = np.std(tuple)\n",
+    "    TFQuartile = np.percentile(tuple,25)\n",
+    "    TF3Quartile = np.percentile(tuple,75)\n",
+    "\n",
+    "    print(TF3Quartile)\n",
     "\n",
     "\n",
     "more_numbers = (11.13, 34.87, 95.59, 82.49, 42.73, 11.12, 95.57)\n",
@@ -260,6 +265,11 @@
     "Las palabras que están en la segunda lista y no en la primera\n",
     "Las palabras que están en la primera lista y en la segunda, pero no en amabas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -278,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
