Analsis bivariado con AnovaRm

--- a/MaterialDeClase/Proyecto/AnalisisBivariado.ipynb
+++ b/MaterialDeClase/Proyecto/AnalisisBivariado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2052 entries, 0 to 2051\n",
+      "Index: 2052 entries, 0 to 2051\n",
       "Data columns (total 5 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
@@ -187,7 +187,7 @@
        "[2052 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,12 +199,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Entity\n",
        "Argentina               57\n",
        "Armenia                 57\n",
        "Netherlands             57\n",
@@ -241,10 +242,10 @@
        "Iran                    57\n",
        "Italy                   57\n",
        "United States           57\n",
-       "Name: Entity, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +809,7 @@
        "1538  South Africa  ZAF  2021               12.150              7.339827"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +965,7 @@
        "[1026 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1121,7 @@
        "[285 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1260,8 +1261,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Entity Code  Year  Nuclear_Electricity  \\\n",
-       "57                 Armenia  ARM  1965                 0.00   \n",
+       "                    Entity Code  Year  Nuclear_Electricity   \n",
+       "57                 Armenia  ARM  1965                 0.00  \\\n",
        "58                 Armenia  ARM  1966                 0.00   \n",
        "59                 Armenia  ARM  1967                 0.00   \n",
        "60                 Armenia  ARM  1968                 0.00   \n",
@@ -1289,7 +1290,7 @@
        "[570 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,10 +1304,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Nuclear_Electricity</th>\n",
+       "      <th>Annual_CO2_emissions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.691150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1966</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.739566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.604760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.634962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>China</td>\n",
+       "      <td>CHN</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.758248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2047</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>804.95</td>\n",
+       "      <td>15.800776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2048</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>807.08</td>\n",
+       "      <td>16.187923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2049</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>809.41</td>\n",
+       "      <td>15.730885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2050</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>789.88</td>\n",
+       "      <td>14.037217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2051</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>778.19</td>\n",
+       "      <td>14.858668</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>171 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Entity Code  Year  Nuclear_Electricity  Annual_CO2_emissions\n",
+       "399           China  CHN  1965                 0.00              0.691150\n",
+       "400           China  CHN  1966                 0.00              0.739566\n",
+       "401           China  CHN  1967                 0.00              0.604760\n",
+       "402           China  CHN  1968                 0.00              0.634962\n",
+       "403           China  CHN  1969                 0.00              0.758248\n",
+       "...             ...  ...   ...                  ...                   ...\n",
+       "2047  United States  USA  2017               804.95             15.800776\n",
+       "2048  United States  USA  2018               807.08             16.187923\n",
+       "2049  United States  USA  2019               809.41             15.730885\n",
+       "2050  United States  USA  2020               789.88             14.037217\n",
+       "2051  United States  USA  2021               778.19             14.858668\n",
+       "\n",
+       "[171 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "globalPowers =  ['United States','China','India']\n",
+    "gp = df.loc[df['Entity'].isin(globalPowers)]\n",
+    "gp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from statsmodels.stats.anova import AnovaRM"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#ANOVARM Europa\n",
+    "\n",
+    "Hipótesis nula:\n",
+    "\n",
+    "No hay diferencias significativas en el uso de energía nuclear entre países de Europa desde 1965 hasta 2021.\n",
+    "\n",
+    "Hipótesis alternativas:\n",
+    "\n",
+    "Hay diferencias significativas en el uso de energía nuclear entre países de Europa desde 1965 hasta 2021.\n",
+    "\n",
+    "-Regla de aceptación si  el valor  de p.value es mayor al 0.05  la hipótesis  nula sera aceptada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Anova\n",
+      "====================================\n",
+      "     F Value  Num DF  Den DF  Pr > F\n",
+      "------------------------------------\n",
+      "Year  5.1356 56.0000 952.0000 0.0000\n",
+      "====================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "aov = AnovaRM(Europe, 'Nuclear_Electricity', 'Entity', within=['Year'])\n",
+    "res = aov.fit()\n",
+    "print(res.summary())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decisión: la hipótesis nula  se rechaza ya que  el  valor  de  p.value es menor al 0.05.\n",
+    "\n",
+    "Conclusión:Hay diferencias significativas en el uso de energía nuclear entre países de Europa a lo largo de varios años."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#ANOVARM América  \n",
+    "\n",
+    "Hipótesis nula:\n",
+    "\n",
+    "No hay diferencias significativas en el uso de energía nuclear entre países de América desde 1965 hasta 2021.\n",
+    "\n",
+    "Hipótesis alternativas:\n",
+    "\n",
+    "Hay diferencias significativas en el uso de energía nuclear entre países de América desde 1965 hasta 2021.\n",
+    "\n",
+    "-Regla de aceptación si  el valor  de p.value es mayor al 0.05  la hipótesis  nula sera aceptada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Anova\n",
+      "====================================\n",
+      "     F Value  Num DF  Den DF  Pr > F\n",
+      "------------------------------------\n",
+      "Year  1.4189 56.0000 224.0000 0.0399\n",
+      "====================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "aov = AnovaRM(America, 'Nuclear_Electricity', 'Entity', within=['Year'])\n",
+    "res = aov.fit()\n",
+    "print(res.summary())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decisión: la hipótesis nula  se rechaza ya que  el  valor  de  p.value es menor al 0.05.\n",
+    "\n",
+    "Conclusión:Hay diferencias significativas en el uso de energía nuclear entre países de Europa a lo largo de varios años."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#ANOVARM Asia \n",
+    "\n",
+    "Hipótesis nula:\n",
+    "\n",
+    "No hay diferencias significativas en el uso de energía nuclear entre países de Asia desde 1965 hasta 2021.\n",
+    "\n",
+    "Hipótesis alternativas:\n",
+    "\n",
+    "Hay diferencias significativas en el uso de energía nuclear entre países de Asia desde 1965 hasta 2021.\n",
+    "\n",
+    "-Regla de aceptación si  el valor  de p.value es mayor al 0.05  la hipótesis  nula sera aceptada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Anova\n",
+      "====================================\n",
+      "     F Value  Num DF  Den DF  Pr > F\n",
+      "------------------------------------\n",
+      "Year  1.4561 56.0000 504.0000 0.0210\n",
+      "====================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "aov = AnovaRM(Asia, 'Nuclear_Electricity', 'Entity', within=['Year'])\n",
+    "res = aov.fit()\n",
+    "print(res.summary())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decisión: la hipótesis nula  se rechaza ya que  el  valor  de  p.value es menor al 0.05.\n",
+    "\n",
+    "Conclusión:Hay diferencias significativas en el uso de energía nuclear entre países de Europa a lo largo de varios años."
+   ]
   },
   {
    "cell_type": "code",
@@ -1332,7 +1660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
